fixed some minor issues

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -17,7 +17,7 @@ frontend stats
   log global
 
 frontend fe_srvr
-	bind ":${FRONTEND_BIND}"
+  bind :"${FRONTEND_BIND}"
   default_backend be_srvr
 
 backend be_srvr
